--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
@@ -49,15 +50,14 @@
 
     <ToggleButton
         android:id="@+id/toggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="148dp"
-        android:layout_marginTop="272dp"
+        android:layout_width="132dp"
+        android:layout_height="174dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="312dp"
+        android:background="@drawable/button_custom"
         android:onClick="onToggleClicked"
-        android:textOff="Выключено"
-        android:textOn="Включено"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
