--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="345dp"
-        android:layout_height="298dp"
-        android:layout_marginStart="32dp"
-        android:layout_weight="1"
-        android:src="@drawable/animation_button_on"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93" />
+
 
     <Button
         android:id="@+id/buttonHelp"
@@ -48,13 +37,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ToggleButton
+    <ImageButton
+        android:id="@+id/img"
+        android:layout_width="100dp"
+        android:layout_height="93dp"
+        android:onClick="StopListen"
+        android:rotation="20"
+        android:scaleType="centerCrop"
+        android:src="@drawable/animation_button_on"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/buttonHelp"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.291" />
+
+    <ImageButton
         android:id="@+id/toggle"
         android:layout_width="66dp"
         android:layout_height="88dp"
-        android:background="@drawable/button_custom"
-        android:onClick="onToggleClicked"
-        android:textOff=" "
+        android:background="@drawable/button_off"
+        android:onClick="StartListen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
