--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,8 +78,9 @@
         android:layout_height="78dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img">
 
 
         <Button
@@ -91,12 +92,13 @@
             android:onClick="sendMessage"
             app:icon="@mipmap/keyboard" />
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/buttonHelp"
-            android:layout_width="64dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="HelpButton"
-            android:textSize="12sp"
+            android:tint="@color/black"
+            app:fabSize="mini"
             app:icon="@mipmap/question_mar" />
 
         <EditText
