--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.1" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -10,67 +11,44 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="356dp"
-        android:layout_height="261dp"
-        android:background="#FFFFFF"
-        android:fontFamily="sans-serif"
-        android:scrollbars="vertical"
-        android:text=""
-        android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.301"
-        app:layout_constraintStart_toStartOf="parent"
+    <ListView
+        android:id="@+id/list_of_massages"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/flow"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.056" />
-
-    <TextView
-        android:id="@+id/textViewUser"
-        android:layout_width="352dp"
-        android:layout_height="95dp"
-        android:background="#FFFFFF"
-        android:fontFamily="sans-serif"
-        android:scrollbars="vertical"
-        android:text="@string/hello_world"
-        android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.728"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        android:divider="@android:color/transparent"
+        android:dividerHeight="18dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:stackFromBottom="true"/>
 
     <ImageButton
         android:id="@+id/img"
         android:layout_width="100dp"
         android:layout_height="93dp"
+        android:layout_marginBottom="96dp"
         android:onClick="StopListen"
         android:scaleType="centerCrop"
         android:src="@drawable/animation_button_on"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.773" />
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/micButton"
         android:layout_width="65dp"
         android:layout_height="68dp"
+        android:layout_marginBottom="108dp"
         android:onClick="StartListen"
         app:icon="@mipmap/mic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.76" />
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RelativeLayout
         android:id="@+id/layout_gchat_chatbox"
@@ -78,9 +56,11 @@
         android:layout_height="78dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img">
+        app:layout_constraintTop_toBottomOf="@id/img"
+        app:layout_constraintVertical_bias="1.0">
 
 
         <Button
@@ -122,18 +102,17 @@
     </RelativeLayout>
 
     <androidx.constraintlayout.helper.widget.Flow
-        android:layout_width="406dp"
-        android:layout_height="177dp"
-        android:layout_marginTop="28dp"
+        android:id="@+id/flow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         app:constraint_referenced_ids="choiseButton1,choiseButton2, choiseButton3, choiseButton4"
         app:flow_horizontalGap="8dp"
         app:flow_maxElementsWrap="2"
         app:flow_verticalGap="8dp"
         app:flow_wrapMode="chain"
         app:layout_constraintBottom_toTopOf="@+id/img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUser" />
+        />
 
     <Button
         android:id="@+id/choiseButton1"
@@ -157,7 +136,7 @@
         android:layout_height="wrap_content"
         android:onClick="EventButton"
         android:text="Играть одному"
-        android:visibility="visible" />
+        android:visibility="visible"/>
 
     <Button
         android:id="@+id/choiseButton4"
@@ -166,7 +145,6 @@
         android:onClick="EventButton"
         android:text="Играть компанией"
         android:visibility="visible" />
-    />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
